# rules-as-code-mcp

./: .gitignore  PORTFOLIO.md  README.md  SETUP.md  SPEC.md  WEBSITE_BLURB.md  pyproject.toml
clients/: demo.md  demo_client.py  demo_transcript.md
eval/: cases.json  report.md  run_eval.py  run_server_eval.py  server_report.md
rules/: __init__.py  citations.py  constants.py  models.py  programs.py  snap.py  version.py
rules/tests/: test_citations.py  test_constants.py  test_programs.py  test_snap.py  test_validation.py
server/: __init__.py  auth.py  errors.py  main.py  store.py  tools.py
server/tests/: test_auth.py  test_tools.py
