[project]
name = "rules-as-code-mcp"
version = "0.1.0"
description = "Deterministic SNAP eligibility rules-as-code exposed as auditable MCP tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27,<2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
rules-mcp = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rules", "server"]

[tool.pytest.ini_options]
testpaths = ["rules/tests", "eval"]
addopts = "-q"
